--- a/app/globals.css
+++ b/app/globals.css
@@ -9,3 +9,14 @@
 .otherBoxStyle {
     background-color: #ccc; /* Estilo específico para las demás tarjetas */
 }
+body{
+    background-color: #1b1b1b;
+}
+
+.card {
+    backdrop-filter: blur(24px) saturate(180%);
+    -webkit-backdrop-filter: blur(24px) saturate(180%);
+    background-color: rgba(17, 25, 40, 0.57);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+}
